[package]
name = "webservice"
version = "0.1.0"
edition = "2024"
default-run = "teacher-service" #定义默认执行的 文件

[dependencies]
actix-web = "4"  #actix-rt，用 actix-web 4.x 就行——运行时已经内置 tokio， 不需要写 actix-rt了
serde = { version = "1.0.228", features = ["derive"]} #A generic serialization/deserialization framework
chrono = { version = "0.4.42", features = ["serde"]}   #Date and time library for Rust
serde_json = "1.0.148"
sqlx = { version = "0.8.5", features = [
    "postgres",         
    "runtime-tokio-rustls", 
    "macros",          
    "chrono",          
] }
# ========== 环境变量 ==========
dotenv = "0.15.0"

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"